# nxp-se050-middleware

./: Android.mk  CMakeLists.txt  LA_OPT_NXP_Software_License.txt  README.First.txt  README.md  SCR.txt  version_info.txt
akm/: Readme.rst  fsl_sss_ftr.h
akm/doc/: stack-with-se050.rst
binaries/: Readme.txt
demos/: version_info.txt
demos/apdu_player/: CMakeLists.txt  Readme.rst  apdu_player.c
demos/ksdk/: CMakeLists.txt
demos/ksdk/common/boards/frdmmcxa153/: CMakeLists.txt
demos/lpc55s/: CMakeLists.txt
demos/opc_ua/: CMakeLists.txt
demos/se05x/: CMakeLists.txt
demos/se05x/se05x_am_reset_ex/: CMakeLists.txt  readme.rst  se05x_am_reset_ex.c
demos/test_Crypto/: CMakeLists.txt  test_Crypto.c
doc/: .buildinfo  Note.html  Revision_history.html  appendix.html  cli-tool.html  dev-platforms.html  edgelock2go-agent.html  folder-structure.html  genindex.html  index.html  objects.inv  organization-of-documentation.html  search.html  searchindex.js  sss-apis.html  sw-prerequisites.html  toc.html
doc/_static/: documentation_options.js
doc/akm/: Readme.html
doc/api/: api_list.html  define_ex__sss__main__inc_8h_1a04543de0eab628c27b9d5b7e971b8591.html  define_ex__sss__main__inc_8h_1a082fb204028aaf9551006347f57ee79a.html  define_ex__sss__main__inc_8h_1a6faed77e0041c430b7f03296163552a3.html  define_fsl__sss__api_8h_1a39969f48eef83c47be423d614915c2f8.html  define_fsl__sss__api_8h_1a48acb15f2b020fd3bc4c2b15ff624284.html  define_fsl__sss__api_8h_1a6a057e7a2065a10b210afdeb94bae6f1.html  define_fsl__sss__api_8h_1aa1af447991b3848e05812a3f91626ea7.html  define_fsl__sss__api_8h_1ae926df49f1fbab82d5bdb74dd4f36791.html  define_fsl__sss__se05x__apis_8h_1a03428ef5f3d83f807423cc082f5b1d86.html  define_fsl__sss__se05x__apis_8h_1a053d59c0a21ed44faf308d7fbeed2a4e.html  define_fsl__sss__se05x__apis_8h_1a0a0bf1c33ad8f2412c90e9843cbc96ed.html  define_fsl__sss__se05x__apis_8h_1a0ef2490f1e4a59965b9869634a5858f9.html  define_fsl__sss__se05x__apis_8h_1a126e107ef55553ff2c296c2acee896cb.html  define_fsl__sss__se05x__apis_8h_1a1339f67556f4bb8343d4b55fb6e85909.html  define_fsl__sss__se05x__apis_8h_1a15c6aee28e2a92986d2244a0f232174f.html  define_fsl__sss__se05x__apis_8h_1a16c860a3eb44984d8a6cd7e374a64dc0.html  define_fsl__sss__se05x__apis_8h_1a18f4a3c294052109668c2197e42c24c4.html  define_fsl__sss__se05x__apis_8h_1a1a3cb45f553c2e0f4baab6e0e01a00eb.html  define_fsl__sss__se05x__apis_8h_1a1bff0eb4b744b4134a922fe3ea6e4d74.html  define_fsl__sss__se05x__apis_8h_1a245fab29680978abbdcfeec0ce16e103.html  define_fsl__sss__se05x__apis_8h_1a2570277b6b614e459a142f99d38eee59.html  define_fsl__sss__se05x__apis_8h_1a2832ec5d0615ef603a6ed861ef8807d3.html  define_fsl__sss__se05x__apis_8h_1a2834384d6d1f751488e294832f651b28.html  define_fsl__sss__se05x__apis_8h_1a2fbe2cd95961fe20ab27592915510f5a.html  define_fsl__sss__se05x__apis_8h_1a40e53c361b66a13678130c1b1ccaa616.html  define_fsl__sss__se05x__apis_8h_1a423ba62f75c9028c357d54eda8c9c83f.html  define_fsl__sss__se05x__apis_8h_1a4b8d3cf5beaf2f000215a63426e6feac.html  define_fsl__sss__se05x__apis_8h_1a50ff2797a803d468f15144300ab61cbc.html  define_fsl__sss__se05x__apis_8h_1a5138c968374cfb09ac0dd2b5a8c284d6.html  define_fsl__sss__se05x__apis_8h_1a57300e718fc28ccabb1074cef5d40531.html  define_fsl__sss__se05x__apis_8h_1a5b48313ea926c46cbe41d821258be225.html  define_fsl__sss__se05x__apis_8h_1a63baaab451fe53a75dc060dba5716af1.html  define_fsl__sss__se05x__apis_8h_1a64072ae98e2c917e58246407d40e5b3d.html  define_fsl__sss__se05x__apis_8h_1a65b3ffc57fd5feceb474e1dc16330430.html  define_fsl__sss__se05x__apis_8h_1a69533282650e9d512f796b5d83f6a8ce.html  define_fsl__sss__se05x__apis_8h_1a6969ce16c8dc5a18620d159ff1d993b6.html  define_fsl__sss__se05x__apis_8h_1a6a46a483a1ecf0994ec094c89aebba71.html  define_fsl__sss__se05x__apis_8h_1a6ae55a5074304ad63576a76f5fdf7a9c.html  define_fsl__sss__se05x__apis_8h_1a6d057b1f445a3c657c411017654a917f.html  (+802 more)
doc/appendix/: apdu_write_to_buffer.html  glossary.html  ide_mcux.html  multithread_support.html  platfscp.html  rjct_server.html  se052_notes.html  se05x_apis.html  se_uid.html  upload_se05x_using_pycli.html  vcom.html  version_info.html  vs2019-setup.html
doc/building/: cmake.html  frdm-k64f-cmake.html  frdm-k64f-sdk.html  imx6.html  index.html  rpi3.html  windows.html
doc/changes/: index.html  pending.html  v02_05_00_to_v02_03_00.html  v02_06_00.html  v02_07_00.html  v02_09_00.html  v02_10_00.html  v02_11_00.html  v02_11_01.html  v02_11_03.html  v02_12_00.html  v02_14_00.html  v02_15_00.html  v02_16_00.html  v02_16_01.html  v03_00_02.html  v03_00_03.html  v03_00_04.html  v03_00_05.html  v03_00_06.html  v03_01_00.html  v03_01_01.html  v03_03_00.html  v04_00_00.html  v04_00_01.html  v04_01_00.html  v04_01_01.html  v04_01_03.html  v04_02_00.html  v04_03_00.html  v04_03_01.html  v04_03_02.html  v04_03_03.html  v04_04_00.html  v04_04_01.html  v04_04_02.html  v04_05_00.html  v04_05_01.html  v04_05_02.html  v04_05_03.html  (+3 more)
doc/demos/: demo-list.html  eou_config_aws.html  eou_config_azure.html  index.html
doc/dev-platforms/: platform_1060rt.html  platform_android.html  platform_frdm_k64f.html  (+6 more)
ext/: CMakeLists.txt  amazon-freertos.cmake  core-json.cmake  mbed-crypto.cmake  mbedtls-psa.cmake  mbedtls.cmake  mbedtls3x.cmake  mbedtlsAkmLists.mk  paho.cmake
hostlib/: version_info.txt
hostlib/hostLib/fira/: CMakeLists.txt
hostlib/hostLib/fira/inc/: se_FiRaLite_API.h  sus_APDU.h
hostlib/hostLib/fira/src/: se_FiRaLite_API.c  sus_APDU.c
pycli/: readme.txt  requirements.txt
scripts/: cmake_features.py  cmake_options.cmake  cmake_options.mak.in  cmake_options.py  cmake_options.rst  cmake_options.sh  cmake_options_check.cmake  cmake_options_installed.cmake.in  cmake_options_values.cmake  cmake_options_values.rst.txt  create_cmake_projects.py  env_setup.bat  env_setup.ps1  env_setup.sh  ksdk.cmake  ksdk_evkmimxrt1060.cmake  ksdk_evkmimxrt1170.cmake  ksdk_frdmk64f.cmake  ksdk_frdmmcxa153.cmake  ksdk_frdmmcxn947.cmake  ksdk_lpcxpresso55s.cmake  version_info.py
semslite/: CMakeLists.txt  version_info.txt
sss/: version_info.txt
(+1143 files in other folders)
